--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,18 @@
     tools:context=".MainActivity">
 
     <View
-        android:id="@+id/Cube1"
+        android:id="@+id/cube1"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="#FF0000"
+        app:layout_constraintBottom_toTopOf="@+id/cube2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/cube2"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="#FF7700"
@@ -17,47 +28,51 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/view"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="#FF0000"
-        app:layout_constraintBottom_toTopOf="@+id/Cube1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
+        android:id="@+id/cube3"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="#00FF22"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Cube1" />
+        app:layout_constraintTop_toBottomOf="@+id/cube2" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="#00000000"
+        android:background="@drawable/button_color"
         tools:layout_editor_absoluteX="155dp"
-        tools:layout_editor_absoluteY="108dp" />
+        tools:layout_editor_absoluteY="108dp"
+        app:layout_constraintTop_toTopOf="@id/cube1"
+        app:layout_constraintBottom_toBottomOf="@+id/cube1"
+        app:layout_constraintLeft_toLeftOf="@id/cube1"
+        app:layout_constraintRight_toRightOf="@id/cube1"/>
 
     <Button
         android:id="@+id/button2"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="#00000000"
+        android:background="@drawable/button2_color"
         tools:layout_editor_absoluteX="156dp"
-        tools:layout_editor_absoluteY="316dp" />
+        tools:layout_editor_absoluteY="316dp"
+        app:layout_constraintTop_toTopOf="@id/cube2"
+        app:layout_constraintBottom_toBottomOf="@id/cube2"
+        app:layout_constraintLeft_toLeftOf="@id/cube2"
+        app:layout_constraintRight_toRightOf="@id/cube2"/>
 
     <Button
         android:id="@+id/button3"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="#00000000"
+        android:background="@drawable/button3_color"
         tools:layout_editor_absoluteX="156dp"
-        tools:layout_editor_absoluteY="524dp" />
+        tools:layout_editor_absoluteY="524dp"
+        app:layout_constraintTop_toTopOf="@id/cube3"
+        app:layout_constraintBottom_toBottomOf="@id/cube3"
+        app:layout_constraintLeft_toLeftOf="@id/cube3"
+        app:layout_constraintRight_toRightOf="@id/cube3"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
